# elip

./: CMakeLists.txt  README.md
cmake/config/: ElipConfig.cmake.in
include/elip/stats/: random_engine.h  random_sample.h
src/: CMakeLists.txt
src/stats/: CMakeLists.txt  random_engine.cpp
test/: CMakeLists.txt
test/stats/: CMakeLists.txt  stats.cpp
